# office-tools

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/flowbak/: main_wf.yml
.github/workflows/: branch_pr_merge.yml  main_wf.yml
src/: newfiles.py
src/office_tools/: dde.py  doc_handler.py  email_handler.py  excel.py  merger.py  o_tool.py  system_tools.py
src/office_tools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_doc.py
