[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name ="office_tools"
version = "0.0.1"
dependencies = [
    "docxtpl",
    "pywin32",
    "openpyxl",
    "docx2pdf",
    "pysimplegui",
]

[tool.mypy]
files = "src/**/*.py"
ignore_missing_imports = true
strict = true
mypy_path = "stubs"

[tool.ruff]
line-length = 88
fix = true
show-fixes = true
show-source = true
src = ["src", "test"]

[tool.ruff.lint]
extend-select = [
  "UP",  # pyupgrade
    "E",  # pycodestyle
    "W",  # pycodestyle warnings
]

[tool.ruff.format]
quote-style = "single"