[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name ="office-tools"
version = "0.0.1"
dependencies = [
    "docxtpl",
    "pywin32",
    "openpyxl",
    "docx2pdf",
    "pysimplegui",
]

[tool.mypy]
files = "src/**/*.py"
ignore_missing_imports = true
strict = true
mypy_path = "stubs"

[tool.ruff]
target-version = "py311"
line-length = 100
fix = true
show-fixes = true
show-source = true
src = ["src", "test"]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.lint]
extend-select = [
  "UP",  # pyupgrade
    "E",  # pycodestyle
    "W",  # pycodestyle warnings
]

[tool.ruff.format]
quote-style = "single"